# elginvault

./: .env.example  README.md  build_all.sh  config.ini  deploy.sh  fxcm.csv  migrate_dev_db.sh  pyproject.toml  pytest.ini  run_dev.sh  sample_stock.csv  upload_stock_data.sh
app/: main.py  models.py
app/repositories/: exceptions.py  stock_data_repository.py  stock_vault_catalog_repository.py
app/services/: stock_data_service.py  stock_vault_services.py
db/: connection.py  queries.py
db/migrations/: create_tables.sql
db/queries/: delete_stock_data_by_ticker.sql  delete_stock_vault_entry_by_ticker.sql  get_all_stock_vault_catalog.sql  get_stock_data_by_ticker_and_time_range.sql  get_stock_vault_entry_by_ticker.sql  insert_stock_data.sql  insert_stock_vault_entry.sql
docker/: compose.yaml.template
docker/elginvault-api/: Dockerfile  build.sh
docker/elginvault-db/: Dockerfile  build.sh  entrypoint.sh
stock_downloader/: elgin_api.py  utils.py  vum.py
tests/: conftest.py
tests/data/: valid_stock_data.csv
tests/integration/: test_integration_api.py  test_integration_db.py  test_integration_repositories.py
tests/unit/: test_db.py  test_main.py  test_repositories.py  test_services.py
